@@ -1946,12 +1946,6 @@ div#game_render {
                                     }
                                     else
                                     {
-                                    if(ss.mode() === 'fractal' && ss.tier()>1)
-                                        {
-                                            ss.tier.inc(-1);
-                                            ss.restock();
-                                            return;
-                                        }
                                         ss.prev_stat();
                                     }
                                 }}">&#60; &#62;</button>
