@@ -551,6 +551,13 @@ FractalPart = Part.$extend('FractalPart', {
         // if(game.animating_shell()) return;
         // if(!self.node()) return; // Not in islots!
         // game.zoom_to_fractal(self);
+        if(!Ice.isa(self.container(), ShopSlot)) return;
+        var empty = _.find(game.inventory_slots(), function(is) {
+            return !is.part();
+        });
+        if(!empty) return;
+
+        empty.set_part(self);
     },
     raph: function(element, raph) {
         var self = this;
